some basic formatting. Fixed the heading at top of the page. Cohesive linking is better than isolating everything.

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -3,7 +3,7 @@
     <div id="splash">
       {{.}}
       {{with partial "qotd.html"}}
-        <bq class="splash">{{.}}</bq>
+        <div class="splash">{{.}}</div>
       {{end}}
     </div>
   {{end}}
