--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“It's the idea that people living close to nature tend to be noble. It's seeing all those sunsets that does it. You can't watch a sunset and then go off and set fire to your neighbor's tepee. Living close to nature is wonderful for your mental health.”</p><p><i>– Daniel Quinn</i></p>
+<p>“Motivation will almost always beat mere talent.”</p><p><i>– Norman Ralph Augustine</i></p>
