--- a/layouts/partials/qotd.html
+++ b/layouts/partials/qotd.html
@@ -1,1 +1,1 @@
-<p>“Motivation will almost always beat mere talent.”</p><p><i>– Norman Ralph Augustine</i></p>
+<p>“Every soul is engaged in a great work-the labor of personal liberation from the state of ignorance. The world is a great prison; its bars are the Unknown. And each is a prisoner until, at last, he earns the right to tear these bars from their moldering sockets, and pass, illuminated and inspired into the darkness, which becomes lighted by that presence.”</p><p><i>– Manly P. Hall</i></p>
