--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Evan DiBona ➤ {{substr .File.Dir 0 -1}} </title>
+  <title>
+    {{if eq .Page.Kind "home"}}
+      Evan DiBona
+    {{else}}
+      ➤ {{substr .File.Dir 0 -1}} 
+    {{end}}
+  </title>
   <meta name="description" content="{{.Summary}}" />
   <link rel="stylesheet" href="/css/base-min.css">
   <link rel="stylesheet" href="/css/pure-min.css">
