--- a/static/css/main.css
+++ b/static/css/main.css
@@ -26,6 +26,7 @@ body {
 }
 
 .spacer   { height: 5em; }
+.m-s      { height: 1em; }
 .h-spacer { padding-right: 0.5em; }
 
 figcaption {
@@ -52,6 +53,18 @@ h1, h2, h3 { font-family: fell-french; }
 h1 { font-size: 1.5em }
 h2 { font-size: 1.25em }
 h3 { font-size: 1.1em }
+.title {
+  text-align: center;
+}
+.title h1 {
+  font-size: 1.8em;
+  margin-bottom: 0.32em; 
+}
+.title img {
+  max-height: 1.5em; 
+  display: inline-block; 
+  opacity: 40%; 
+}
 
 #splash {
   text-align: center;
@@ -82,6 +95,21 @@ img.portrait {
   width: 60%; 
   max-width: 16em; 
 }
+
+.gallery { overflow: hidden; }
+
+.sq-v {
+  height: 100%;
+  overflow: hidden;
+  max-width: 200%;
+}
+
+.sq-h {
+  width: 100%;
+  overflow: hidden;
+  max-height: 200%;
+}
+
 
 
 /*** LINKS ***/
@@ -157,9 +185,6 @@ span.square-red {
 
 div.header h1,h2,h3 {
   margin: 0.12em 0;
-}
-div.title h1 {
-  text-align: center; 
 }
 h1.ntry-h, h2.ntry-h {
   margin: 0; 
@@ -278,7 +303,7 @@ body, .pure-g [class*=pure-u] {
 }
 
 img.contact {
-  max-height: 1.8em; 
+  max-height: 1.9em; 
   opacity: 0.5; 
   display: inline-block; 
 }
